# VulkanRayTracer

./: Cargo.toml
scenes/: cornell_box.usda  cornell_box.usdc
shaders/: common.glsl  diffuse.glsl  ray_gen.glsl  ray_miss.glsl
src/: camera.rs  engine.rs  lib.rs  main.rs  material.rs  mesh.rs  parser.rs  ray.rs  sampling.rs  shaders.rs  state.rs  vertex.rs
utils/: file_converter.py
