[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkano = "0.35"
vulkano-shaders = "0.35"
image = "0.24"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.9.1"
glam = { version = "0.30.9", features = ["bytemuck"] }
openusd = "0.1.4"
anyhow = "1.0.100"

[profile.dev]
opt-level = 1 
